--- a/tests/autoload.php.dist
+++ b/tests/autoload.php.dist
@@ -3,5 +3,5 @@ session_start();
 
 require_once __DIR__ . '/../Moss/loader/Loader.php';
 $Loader = new \Moss\loader\Loader();
-$Loader->registerNamespace(null, __DIR__ . '/../');
+$Loader->addNamespace(null, __DIR__ . '/../');
 $Loader->register();
