Added test for logger

--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -24,6 +24,7 @@
 			<directory>./Moss/http/response/</directory>
 			<!--<directory>./Moss/http/cookie/</directory>-->
 			<!--<directory>./Moss/http/session/</directory>-->
+			<directory>./Moss/logger/</directory>
 			<directory>./Moss/router/</directory>
 			<directory>./Moss/security/</directory>
 		</testsuite>
