--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -16,17 +16,18 @@
 	</php>
 
 	<testsuites>
-		<testsuite name="Moss core">
-			<directory>./Moss/config/</directory>
-			<directory>./Moss/container/</directory>
-			<directory>./Moss/dispatcher/</directory>
-			<directory>./Moss/http/request/</directory>
-			<directory>./Moss/http/response/</directory>
-			<!--<directory>./Moss/http/cookie/</directory>-->
-			<!--<directory>./Moss/http/session/</directory>-->
-			<directory>./Moss/logger/</directory>
-			<directory>./Moss/router/</directory>
-			<!--<directory>./Moss/security/</directory>-->
+		<testsuite name="moss core">
+			<directory>./moss/config/</directory>
+			<directory>./moss/container/</directory>
+			<directory>./moss/dispatcher/</directory>
+			<directory>./moss/http/request/</directory>
+			<directory>./moss/http/response/</directory>
+			<!--<directory>./moss/http/cookie/</directory>-->
+			<!--<directory>./moss/http/session/</directory>-->
+			<directory>./moss/logger/</directory>
+			<directory>./moss/router/</directory>
+			<!--<directory>./moss/security/</directory>-->
+			<directory>./moss/view/</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
