--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -22,11 +22,11 @@
 			<directory>./moss/dispatcher/</directory>
 			<directory>./moss/http/request/</directory>
 			<directory>./moss/http/response/</directory>
-			<!--<directory>./moss/http/cookie/</directory>-->
-			<!--<directory>./moss/http/session/</directory>-->
+			<directory>./moss/http/cookie/</directory>
+			<directory>./moss/http/session/</directory>
 			<directory>./moss/logger/</directory>
 			<directory>./moss/router/</directory>
-			<!--<directory>./moss/security/</directory>-->
+			<directory>./moss/security/</directory>
 			<directory>./moss/view/</directory>
 		</testsuite>
 	</testsuites>
