--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,20 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit backupGlobals="true"
-         backupStaticAttributes="true"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="autoload.php.dist"
-		>
-	<php>
-		<ini name="intl.default_locale" value="en"/>
-	</php>
-
+<phpunit colors="true" bootstrap="./tests/autoload.php.dist">
 	<testsuites>
 		<testsuite name="moss core">
 			<directory>./moss/config/</directory>
