updated storage repo

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "moss/moss",
-	"version": "0.8.0.1",
+	"version": "0.8.0.2",
 	"description": "The PHP micro-framework",
 	"keywords": ["microframework"],
 	"type": "framework",
@@ -11,22 +11,12 @@
 			"email": "wachowski.michal@gmail.com"
 		}
 	],
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 	"repositories": [
 		{
-			"type": "package",
-			"package": {
-				"name": "moss/storage",
-				"version": "0.0.1",
-				"dist": {
-					"url": "http://github.com/Potfur/moss-storage/archive/master.zip",
-					"type": "zip"
-				},
-				"autoload": {
-					"psr-0": {
-						"moss\\storage\\": ""
-					}
-				}
-			}
+			"type": "vcs",
+			"url": "https://github.com/Potfur/moss-storage"
 		},
 		{
 			"type": "package",
