--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Moss/Moss",
-	"version": "0.8.2",
+	"version": "0.8.4",
 	"description": "The PHP micro-framework",
 	"keywords": ["microframework"],
 	"type": "framework",
@@ -20,6 +20,10 @@
 		},
 		{
 			"type": "vcs",
+			"url": "https://github.com/potfur/moss-locale"
+		},
+		{
+			"type": "vcs",
 			"url": "https://github.com/potfur/moss-twig-bridge"
 		}
 	],
@@ -31,6 +35,7 @@
 	},
 	"suggest": {
 		"moss/storage": "Simple ORM (data mapper), accelerates logic development",
+		"moss/locale": "Translation/localisation class based on one from Sf2",
 		"moss/bridge": "Adds Twig as templating engine with additional functionalities"
 	}
 }
