--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ before_script:
   - composer install --prefer-dist
 
 script:
-  - 'phpunit --coverage-text'
+  - phpunit --coverage-clover=coverage.clover
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
