--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,3 +4,31 @@ filter:
     excluded_paths: [cache/*, compile/*, docs/*, tests/*, vendor/*, web/* ]
 tools:
     external_code_coverage: true
+    php_code_sniffer: true
+        extensions:
+            - php
+        config:
+            tab_width:            4
+            encoding:             utf8
+            ruleset:              ~
+            standard:             PSR2
+    php_mess_detector:
+        extensions:
+            - php
+        config:
+            design_rules:
+                exit_expression:      true
+                eval_expression:      true
+                goto_statement:       true
+            unused_code_rules:
+                unused_private_field:  true
+                unused_local_variable:  true
+                unused_private_method:  true
+                unused_formal_parameter:  true
+            controversial_rules:
+                superglobals:         true
+                camel_case_class_name:  true
+                camel_case_property_name:  true
+                camel_case_method_name:  true
+                camel_case_parameter_name:  true
+                camel_case_variable_name:  true
