--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,13 +4,15 @@ filter:
     excluded_paths: [cache/*, compile/*, docs/*, tests/*, vendor/*, web/* ]
 tools:
     external_code_coverage: true
-    php_code_sniffer: true
+    php_code_sniffer:
+        enabled: true
         config:
             tab_width: 4
             encoding: utf8
             ruleset: ~
             standard: PSR2
     php_mess_detector:
+        enabled: true
         config:
             design_rules:
                 exit_expression: true
