--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,7 @@ imports:
     - php
 filter:
     excluded_paths: [cache/*, compile/*, docs/*, tests/*, vendor/*, web/* ]
+tools:
     external_code_coverage: true
     php_code_sniffer:
         enabled: true
@@ -28,93 +29,93 @@ filter:
                 camel_case_method_name: true
                 camel_case_parameter_name: true
                 camel_case_variable_name: true
-    checks:
-        php:
-            verify_property_names: true
-            verify_argument_usable_as_reference: true
-            verify_access_scope_valid: true
-            variable_existence: true
-            useless_calls: true
-            use_statement_alias_conflict: true
-            use_self_instead_of_fqcn: true
-            uppercase_constants: true
-            unused_variables: true
-            unused_properties: true
-            unused_parameters: true
-            unused_methods: true
-            unreachable_code: true
-            too_many_arguments: true
-            sql_injection_vulnerabilities: true
-            spacing_of_function_arguments: true
-            spacing_around_non_conditional_operators: true
-            spacing_around_conditional_operators: true
-            space_after_cast: true
-            single_namespace_per_use: true
-            simplify_boolean_return: true
-            side_effects_or_types: true
-            security_vulnerabilities: true
-            scope_indentation:
-                spaces_per_level: '4'
-            return_doc_comments: true
-            return_doc_comment_if_not_inferrable: true
-            require_scope_for_properties: true
-            require_scope_for_methods: true
-            require_php_tag_first: true
-            require_braces_around_control_structures: true
-            psr2_switch_declaration: true
-            psr2_control_structure_declaration: true
-            psr2_class_declaration: true
-            property_assignments: true
-            properties_in_camelcaps: true
-            prefer_unix_line_ending: true
-            precedence_mistakes: true
-            precedence_in_conditions: true
-            phpunit_assertions: true
-            php5_style_constructor: true
-            parameters_in_camelcaps: true
-            parameter_non_unique: true
-            parameter_doc_comments: true
-            param_doc_comment_if_not_inferrable: true
-            overriding_private_members: true
-            optional_parameters_at_the_end: true
-            one_class_per_file: true
-            non_commented_empty_catch_block: true
-            no_unnecessary_if: true
-            no_unnecessary_function_call_in_for_loop: true
-            no_unnecessary_final_modifier: true
-            no_underscore_prefix_in_properties: true
-            no_underscore_prefix_in_methods: true
-            no_trait_type_hints: true
-            no_space_inside_cast_operator: true
-            no_space_before_semicolon: true
-            no_space_around_object_operator: true
-            no_property_on_interface: true
-            no_non_implemented_abstract_methods: true
-            no_goto: true
-            no_global_keyword: true
-            no_exit: true
-            no_eval: true
-            no_error_suppression: true
-            no_empty_statements: true
-            no_duplicate_arguments: true
-            no_debug_code: true
-            no_commented_out_code: true
-            newline_at_end_of_file: true
-            lowercase_php_keywords: true
-            lowercase_basic_constants: true
-            function_in_camel_caps: true
-            function_body_start_on_new_line: true
-            encourage_single_quotes: true
-            duplication: true
-            deprecated_code_usage: true
-            deadlock_detection_in_loops: true
-            code_rating: true
-            closure_use_not_conflicting: true
-            blank_line_after_namespace_declaration: true
-            avoid_usage_of_logical_operators: true
-            avoid_todo_comments: true
-            avoid_fixme_comments: true
-            avoid_duplicate_types: true
-            avoid_closing_tag: true
-            assignment_of_null_return: true
-            argument_type_checks: true
+checks:
+    php:
+        verify_property_names: true
+        verify_argument_usable_as_reference: true
+        verify_access_scope_valid: true
+        variable_existence: true
+        useless_calls: true
+        use_statement_alias_conflict: true
+        use_self_instead_of_fqcn: true
+        uppercase_constants: true
+        unused_variables: true
+        unused_properties: true
+        unused_parameters: true
+        unused_methods: true
+        unreachable_code: true
+        too_many_arguments: true
+        sql_injection_vulnerabilities: true
+        spacing_of_function_arguments: true
+        spacing_around_non_conditional_operators: true
+        spacing_around_conditional_operators: true
+        space_after_cast: true
+        single_namespace_per_use: true
+        simplify_boolean_return: true
+        side_effects_or_types: true
+        security_vulnerabilities: true
+        scope_indentation:
+            spaces_per_level: '4'
+        return_doc_comments: true
+        return_doc_comment_if_not_inferrable: true
+        require_scope_for_properties: true
+        require_scope_for_methods: true
+        require_php_tag_first: true
+        require_braces_around_control_structures: true
+        psr2_switch_declaration: true
+        psr2_control_structure_declaration: true
+        psr2_class_declaration: true
+        property_assignments: true
+        properties_in_camelcaps: true
+        prefer_unix_line_ending: true
+        precedence_mistakes: true
+        precedence_in_conditions: true
+        phpunit_assertions: true
+        php5_style_constructor: true
+        parameters_in_camelcaps: true
+        parameter_non_unique: true
+        parameter_doc_comments: true
+        param_doc_comment_if_not_inferrable: true
+        overriding_private_members: true
+        optional_parameters_at_the_end: true
+        one_class_per_file: true
+        non_commented_empty_catch_block: true
+        no_unnecessary_if: true
+        no_unnecessary_function_call_in_for_loop: true
+        no_unnecessary_final_modifier: true
+        no_underscore_prefix_in_properties: true
+        no_underscore_prefix_in_methods: true
+        no_trait_type_hints: true
+        no_space_inside_cast_operator: true
+        no_space_before_semicolon: true
+        no_space_around_object_operator: true
+        no_property_on_interface: true
+        no_non_implemented_abstract_methods: true
+        no_goto: true
+        no_global_keyword: true
+        no_exit: true
+        no_eval: true
+        no_error_suppression: true
+        no_empty_statements: true
+        no_duplicate_arguments: true
+        no_debug_code: true
+        no_commented_out_code: true
+        newline_at_end_of_file: true
+        lowercase_php_keywords: true
+        lowercase_basic_constants: true
+        function_in_camel_caps: true
+        function_body_start_on_new_line: true
+        encourage_single_quotes: true
+        duplication: true
+        deprecated_code_usage: true
+        deadlock_detection_in_loops: true
+        code_rating: true
+        closure_use_not_conflicting: true
+        blank_line_after_namespace_declaration: true
+        avoid_usage_of_logical_operators: true
+        avoid_todo_comments: true
+        avoid_fixme_comments: true
+        avoid_duplicate_types: true
+        avoid_closing_tag: true
+        assignment_of_null_return: true
+        argument_type_checks: true
