--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 	"suggest": {
 		"moss/storage": "Simple ORM (data mapper), accelerates logic development",
 		"moss/locale": "Translation/localisation class based on one from Sf2",
-		"moss/bridge": "Adds Twig as templating engine with additional functionalities"
+		"moss/twig-bridge": "Adds Twig as templating engine with additional functionalities"
 	},
 	"autoload": {
 		"psr-4": { "": "src/", "Moss\\": "Moss/" }
