--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "moss/framework",
     "version": "v1.2",
     "description": "The PHP micro-framework",
-    "keywords": ["microframework", "framework"],
+    "keywords": ["mossphp", "microframework", "framework"],
     "type": "framework",
     "license": "MIT",
     "authors": [
