--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,13 +3,18 @@ imports:
 filter:
     excluded_paths:
         - tests/*
+        - vendor/*
 tools:
     php_sim: true
     php_pdepend: true
     php_analyzer: true
+    php_mess_detector: true
     php_code_sniffer:
         config:
             standard: PSR2
+    sensiolabs_security_checker: true
+    php_pdepend: true
+    php_code_coverage: true
     external_code_coverage: true
 checks:
     php:
